--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ rvm:
   - 2.1
   - ruby-head
 before_install:
-  - curl https://raw.github.com/groonga/groonga/master/data/travis/setup.sh | sh
+  - curl --silent --location https://github.com/groonga/groonga/raw/master/data/travis/setup.sh | sh
